# Smwork

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  ОТЧЁТ.md
docs/: User_Story_Лапин_Василенко.docx  gen_user_story.js  package.json
sphinx_docs/: Makefile  conf.py  index.rst  modules.rst
src/culinary_blog/: __init__.py  auth.py  config.py  database.py  main.py  models.py
src/culinary_blog/routers/: admin.py  auth.py  pages.py  recipes.py
src/culinary_blog/static/css/: styles.css
src/culinary_blog/static/js/: new_recipe.js  recipes.js  search.js
src/culinary_blog/templates/: _recipe_card.html  admin.html  auth.html  base.html  favorites.html  index.html  new_recipe.html  recipe.html
